# poetry-export-requirements

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  poetry_export_requirements.py  pyproject.toml  setup.cfg  setup.py
.github/: main.yaml
.github/workflows/: main.yaml
hooks/: poetry_export_requirements.py
poetry_export_requirements/: poetry_export_requirements.py
