[metadata]
name = poetry_export_requirements
version = 0.1.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ehdgua01/poetry-export-requirements
author = ehx
author_email = ehdgua01@naver.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.5

[options.entry_points]
console_scripts =
    poetry-export-requirements = poetry_export_requirements.poetry_export_requirements:main
