[metadata]
name = poetry_export_requirements
version = 1.0.0
url = https://github.com/ehdgua01/poetry-export-requirements

author = ehx
author_email = ehdgua01@naver.com

description = Export requirements file using Poetry
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    poetry-export-requirements = poetry_export_requirements.poetry_export_requirements:main
